--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         border: 1px solid #ccc;
         border-radius: 5px;
       }
+      #greetings {
+        font-size: 24px;
+        color: #000;
+      }
     </style>
     <title>Personal Mood App</title>
   </head>
