removed submit button

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         placeholder="Enter your name"
         required
       />
-      <button class="btn" id="btnSubmit">Submit</button>
-      <p style="display: none" id="greetings">Hello, Friend</p>
+      <p id="greetings">Hello, Friend</p>
     </div>
     <div id="moodBox">
       <button class="btn" id="btnGrow">Grow</button>
